Edited the last five newsletters end point
